# eurocg18-angularft

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: FindCPLEX.cmake
gtest/: CMakeLists.txt  gtest_main.cpp
instance/: CMakeLists.txt  angles.cpp  angles.h  angles_gtest.cpp  point.cpp  point.h  point_gtest.cpp  problem_instance.cpp  problem_instance.h  problem_instance_gtest.cpp
ip/: CMakeLists.txt  boost_graph.h  ip_graph.cpp  ip_graph.h  ip_graph_gtest.cpp  ip_point.cpp  ip_point.h  optimal_solver.cpp  optimal_solver.h  optimal_solver_gtest.cpp  solution_graph.cpp  solution_graph.h
utils/: cplex.hpp
